--- a/budsjettapp/src/main/resources/static/index.html
+++ b/budsjettapp/src/main/resources/static/index.html
@@ -28,9 +28,9 @@
             <br><hr style="border: 1px solid rgb(95, 133, 117);"><br>
             <div class="ark-innhold-wrapper">
                 <div class="ark-wrapper">
-                    <p id="ark-1" style="border: 1px solid rgb(95, 133, 117); border-radius: 5px; width: 110px; height: 25px;">• April</p>
-                    <p>• Mars</p>
-                    <p>• Februar</p>
+                    <p id="ark-1" style="border: 1px solid rgb(95, 133, 117); border-radius: 5px; width: 110px; height: 25px; margin: auto;"> April</p>
+                    <p> Mars</p>
+                    <p> Februar</p>
                     <br>
                     <button class="legg-til-ark">+</button>
                 </div>
