--- a/budsjettapp/src/main/resources/static/index.html
+++ b/budsjettapp/src/main/resources/static/index.html
@@ -14,6 +14,8 @@
     <div class="side-wrapper">
         <br>
         <div class="wrapper">
+            
+            <!--HEADER-->
             <div class="header">
                 <div class="budsjett-forbruk">
                     <h2 id="budsjett-h2" class="budsjett-h2" onclick="bytteTilBudsjett()">Budsjett</h2>
@@ -27,6 +29,8 @@
             </div>
             <br><hr style="border: 1px solid rgb(95, 133, 117);"><br>
             <div class="ark-innhold-wrapper">
+
+                <!--ARK-->
                 <div class="ark-wrapper">
                     <p id="ark-1" style="border: 1px solid rgb(95, 133, 117); border-radius: 5px; width: 110px; height: 25px; margin: auto;"> April</p>
                     <p> Mars</p>
@@ -34,14 +38,27 @@
                     <br>
                     <button class="legg-til-ark">+</button>
                 </div>
+
+                <!--BUDSJETT-->
                 <div class="container" id="budsjett-container">
                     <div class="ark-tittel-wrapper">
                         <input placeholder="Navn på side..." value="April" class="ark-tittel" id="ark-tittel-budsjett">
                         <button class="ark-knapp" onclick="endreArkNavnBudsjett()"></button>
                     </div>
                     <br>
+                    <div class="budsjett-item">
+                        <label class="budsjett-label">Inntekt</label>
+                        <label class="budsjett-forbruk-label" id="budsjett-forbruk-label-inntekt"></label>
+                        <div class="budsjett-verdi">
+                            <input placeholder="Beløp..." id="budsjett-verdi-inntekt" class="budsjett-item-tall">
+                            <button class="budsjett-item-knapp">Endre</button>
+                        </div>
+                    </div>
+                    <br>
                     <p id="budsjett-container-p">Legg til budsjett!</p>
                 </div>
+
+                <!--FORBRUK-->
                 <div class="container" id="forbruk-container" style="display: none;">
                     <div class="ark-tittel-wrapper">
                         <input placeholder="Navn på side..." value="April" class="ark-tittel" id="ark-tittel-forbruk">
