--- a/budsjettapp/src/main/resources/static/index.html
+++ b/budsjettapp/src/main/resources/static/index.html
@@ -50,7 +50,7 @@
                         <label class="budsjett-label">Inntekt</label>
                         <label class="budsjett-forbruk-label" id="budsjett-forbruk-label-inntekt"></label>
                         <div class="budsjett-verdi">
-                            <input placeholder="Beløp..." id="budsjett-verdi-inntekt" class="budsjett-item-tall">
+                            <input placeholder="Beløp..." id="budsjett-verdi-inntekt" class="budsjett-item-tall" type="number">
                             <button class="budsjett-item-knapp" onclick="leggTilSum()">Endre</button>
                         </div>
                     </div>
